# Connectatron

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md  imgui_node_editor.h
Applications/Connectatron/: CMakeLists.txt  Connectatron.cpp  Connectatron_Old.cpp  Connectatron_Utils.h  Connectors.h  Protocols.h
Applications/Connectatron/Configuration/: Connectors.json  Protocols.json
Applications/Connectatron/Devices/: 1440p 144Hz Monitor.json  4k 120Hz TV.json  ADATA SX8200PNP.json  AMD PROM21 Chipset 1.json  ASM1061.json  ASRock x670E Taichi Internals.json  ASUS Pro WS X570-ACE.json  ASUS Zenscreen.json  ATEN KVM.json  Bluetooth 4.0 USB.json  Bose QC35 II.json  Common Wall Outlet (NEMA 5-15).json  Connors PC Internals.json  Connors PC.json  Corsair Force MP600.json  Ethernet Gigabit LAN.json  Ethernet Gigabit WAN.json  Ethernet LAN.json  ExternalTest.json  Gen4 NVMe Controller.json  Gen5 NVMe Controller.json  Generic 4k Monitor.json  Generic AC Adapter - Barrel Plug.json  Generic Gigabit Router (4).json  Generic Gigabit Switch (8).json  Generic HID device.json  Generic Headset.json  Generic Monitor.json  Generic Qi Charger.json  Generic SATA HDD.json  Generic USB2 Mic.json  Generic USB2 Webcam.json  Generic WiFi 5 Access Point.json  Generic Wifi 5 Access Point (8).json  HID Game Controller.json  HP Reverb G2 Cabling.json  HP Reverb G2.json  High Definition Audio Controller.json  Intel I211 1Gb NIC.json  Intel Killer E3100G.json  (+34 more)
Applications/Connectatron/Projects/: ASRock x670E Taichi.con  Connor's 3950x PC.con  test.con  (+6 more)
Examples/Connectatron/: CMakeLists.txt
(+57 files in other folders)
